--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <label>Images</label>        
     </div>
     <div>
-        <img src="googlelogo_color_272x92dp.png">
+        <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
     </div>
     <form>
         <div>
