--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
 </head>
 <body>
     <div>
-        <label>Gmail</label>
-        <label>Images</label>        
+        <ul>
+            <li><a href="#Gmail">Gmail</a></li>
+            <li><a href="#Imagenes">Imagenes</a></li>
+        </ul>
     </div>
     <div>
         <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
